customer delete operation

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 </div>
                 <div class="modal-body">
                     <p class="text-danger">Are you sure you want to delete this customer?</p>
-                    <input type="text" class="form-control" id="deleteId" readonly>
+                    <input type="text" class="form-control" id="deleteId" placeholder=" customer ID " >
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
